<resources>
    <string name="app_name">NewsHK</string>

    <string name="tab_top_headlines">熱門新聞</string>
    <string name="tab_business">財經</string>
    <string name="tab_entertainment">娛樂</string>
    <string name="tab_health">健康</string>
    <string name="tab_science">科學</string>
    <string name="tab_sports">體育</string>
    <string name="tab_technology">科技</string>

    <string name="news_detail_title">新聞內容</string>
    <string name="share">分享</string>

    <string name="unable_to_fetch_news">無法取得新聞，請檢查網路連線然後重試。</string>
    <string name="retry">重試</string>

    <string name="downloaded_news">已下載新聞</string>
    <string name="download_for_offline">下載作離線時觀看</string>
    <string name="news_has_been_downloaded">新聞已下載</string>
    <string name="no_downloaded_news">未有任何下載新聞</string>
    <string name="please_press">請按 </string>
    <string name="to_download_news"> 來下載新聞作離線瀏覽</string>

    <string name="press_again_to_exit">再按一次「返回」退出</string>

</resources>
